# gkanda-logistics-monorepo

./: .gitignore  MERGE_SUMMARY.md  README.md  package-lock.json  package.json  signature-preview.html  vercel.json
apps/website/: .gitignore  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  requirements.txt  tailwind.config.js  trigger-deploy.txt  tsconfig.json
apps/website/.qwen/: settings.json
apps/website/markdown/blogs/: blog_1.mdx  blog_2.mdx  blog_3.mdx  blog_4.mdx  blog_5.mdx  blog_6.mdx  blog_7.mdx  blog_8.mdx
apps/website/src/Style/: index.css  style.css
apps/website/src/__tests__/: wire-mesh-calculator.test.ts
apps/website/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/website/src/app/(site)/blog/: page.tsx
apps/website/src/app/about/: page.tsx
apps/website/src/app/api/: data.tsx
apps/website/src/app/contact/: page.tsx
apps/website/src/app/screenshot/: page.tsx
apps/website/src/app/screenshot-comparison/: page.tsx
apps/website/src/app/screenshots/: page.tsx
apps/website/src/app/services/: page.tsx
apps/website/src/app/test/: page.tsx
apps/website/src/app/wire-mesh/: page.tsx
apps/website/src/components/: footer.tsx  navigation.tsx  theme-toggle.tsx
apps/website/src/components/Breadcrumb/: index.tsx
apps/website/src/components/Documentation/: Introduction.tsx
apps/website/src/lib/: test-wire-mesh.ts  wire-mesh-calculator.ts
apps/website/src/tasks/: README.md  cli.ts  json-task-db.ts  task.model.ts  tsconfig.json
apps/website/tests/: example.spec.ts
(+364 files in other folders)
