[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gkalogistics"
version = "0.1.0"
description = "A Python project with ReportLab for gkalogistics"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "reportlab>=3.6.0",
    "cairosvg>=2.7.0",
    "striprtf>=0.0.29",
    "PyPDF2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "flake8"
]

[project.scripts]
gkalogistics = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gkalogistics*", "test*"]